<resources>
    <string name="app_name">retoFinal</string>
    <string name="btnIniciar">iniciar</string>
    <string name="imgSol">imagen</string>
    <string name="btnEntrarLogin">Entrar</string>
    <string name="TextviewUsuarioLogin">Usuario</string>
    <string name="TextviewContraseñaLogin">Contraseña</string>
    <string name="TextviewOlvidar">¿Olvidaste la contraseña?</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="TituloRegistro">Registro</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="Favorito">Favorito</string>
    <string name="btnCompartirTexto">Compartir Texto</string>
    <string name="btnAtras">Atras</string>
    <string name="btnUbicacion">Ubicacion</string>
    <string name="btnGaleria">Galeria</string>
    <string name="TituloEspacios">Espacios Naturales</string>
    <string name="Buscar">Buscar</string>
    <string name="CompartirFoto">Compartir Foto</string>
    <string name="titulofavoritos">Favoritos</string>
    <string name="btnCamara">Camara</string>
    <string name="TituloMenu">Menu Principal</string>
    <string name="Municipios">Municipios</string>
    <string name="Topmunicipios">Top Ranking Municipios</string>
    <string name="TopEspacios">Top Ranking Espacios Naturales</string>
    <string name="OlvidarContraseña">Olvidar Contraseña</string>
    <string name="NombreUsuario">Nombre Usuario</string>
    <string name="ContraseñaNueva">Contraseña nueva</string>
    <string name="RepiteContra">Repite contraseña</string>
    <string name="Cancelar">Cancelar</string>
    <string name="TopMuniciosTitulo">Top 5 Municipios</string>
    <string name="ErrorComunicacion">Error Comunicacion</string>
    <string name="loginCorrecto">Login correcto</string>
    <string name="errorlogin">Error al logear</string>
    <string name="rellenarcampos">Debe rellenar los campos</string>
    <string name="nosepuedemostrarub">No se puede mostrar la ubicacion</string>
    <string name="nohayfoto">No hay Foto</string>
    <string name="errorCompartirFoto">Error compartir foto</string>
    <string name="contraseñaActualizada">Contraseña actualizada con exito</string>
    <string name="contraseñasnocoinciden">Las contraseñas no coinciden</string>
    <string name="erroralcambiarcontra">Error al cambiar contraseña</string>
    <string name="usuarioregistrado">Usuario registrado con exito</string>
    <string name="top5municipios">Top 5 Municipios</string>
    <string name="top5espacios">Top 5 Espacios</string>


</resources>