<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".olvidarContra">

    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/NombreUsuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etContrasenaNueva"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/ContraseñaNueva"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreUsuario" />

    <EditText
        android:id="@+id/etRepiteContra"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/RepiteContra"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasenaNueva" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="62dp"
        android:text="@string/OlvidarContraseña"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:onClick="Ok"
        android:text="OK"
        app:backgroundTint="@color/material_on_background_emphasis_high_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRepiteContra" />

    <Button
        android:id="@+id/btnAtrasOlvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="100dp"
        android:onClick="Vatras"
        android:text="@string/btnAtras"
        app:backgroundTint="@color/material_on_background_emphasis_high_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRecuperar"
        app:layout_constraintTop_toBottomOf="@+id/etRepiteContra" />

</androidx.constraintlayout.widget.ConstraintLayout>