<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosMunicipio">

    <TextView
        android:id="@+id/tNombre"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tDescripcion"
        android:layout_width="227dp"
        android:layout_height="395dp"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tNombre" />


    <Button
        android:id="@+id/btnCamara"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:onClick="tomarFoto"
        android:text="@string/btnGaleria"
        app:backgroundTint="@color/material_on_background_emphasis_high_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/btnCompartir" />

    <Button
        android:id="@+id/btnUbicacion"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:onClick="googleMaps"
        android:text="@string/btnUbicacion"
        app:backgroundTint="@color/material_on_background_emphasis_high_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/tDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/btnCamara" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:onClick="atras"
        android:text="@string/btnAtras"
        app:backgroundTint="@color/material_on_background_emphasis_high_type"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/tDescripcion" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Favorito"
        android:text="@string/Favorito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/tDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/tNombre" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="42dp"
        android:onClick="CompartirTexto"
        android:text="@string/btnCompartirTexto"
        app:backgroundTint="@color/material_on_background_emphasis_high_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toEndOf="@+id/tDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:onClick="datosMetereologicos"
        app:backgroundTint="@color/material_on_background_emphasis_high_type"
        android:text="DATOS METEREOLOGICOS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tDescripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>